[package]
name = "pex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
derive_more= "0.99"
futures = "0.3.28"
log = "0.4"
serde = { version = "1.0", features = [ "derive" ] }
tokio = { version = "1.25", features = [ "sync", "io-std", "io-util", "net", "macros", "rt", "time" ] }
wheel_timer = "0.3.1"
tokio-serde = { version = "0.8.0", features = ["json"] }
tokio-util = { version = "0.7.9", features = ["codec"] }
env_logger = "0.10.0"
rand = { version = "0.8", features = ["rand_chacha"] }
