[package]
name = "naive-pex"
version = "0.1.0"
edition = "2021"
authors = ["Rozhkov Dmitrii <rozhkovdmitrii@yandex.ru>"]
description = "Provides a peer exchange that imples a naive messaging functionality"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "=4.2.0", features = ["derive"] }
env_logger = "0.10"
log = "0.4"
pex = { version = "0.1", path = "../pex" }
tokio = { version = "1.25", features = [ "macros", "rt", "time" ] }
